[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
convert_case = "0.6.0"
getrandom = { version = "0.2.15", features = ["js"] }
html-escape = "0.2.13"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
string_cache = "0.8.7"
swc_atoms = "0.6.7"
swc_core = { version = "0.96.9", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_minifier",
    "ecma_visit",
    "ecma_ast",
    "common",
] }

[dev-dependencies]
swc_core = { version = "0.96.9", features = [
    "testing_transform",
    "ecma_parser",
] }
testing = "0.37.0"
